# metal_tone

./: .gitignore  CMakeLists.txt
Resources/: DethLead.nam  Walk.nam
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
